# SalesManagementApplication

./: .gitignore  CMakeLists.txt  EnterInterface.ui  InventoryInterface.ui  README.md  ReturnInterface.ui  SaleInterface.ui  StatementInterface.ui  TypeAddInterface.ui  cashpaymentdialog.ui  reportSale.ui
include/: AbstractInterface.h  DataEntity.h  Database.h  EnterInterface.h  Error.h  InventoryInterface.h  ReturnInterface.h  SaleInterface.h  StatementInterface.h  TypeAddInterface.h  Utils.h  cashpaymentdialog.h  sacr.h
resource/: sacr.qrc
sql/: database.sql
src/: AbstractInterface.cpp  DataEntity.cpp  Database.cpp  EnterInterface.cpp  Error.cpp  InventoryInterface.cpp  ReturnInterface.cpp  SaleInterface.cpp  StatementInterface.cpp  TypeAddInterface.cpp  Utils.cpp  cashpaymentdialog.cpp  main.cpp  reportSale.cpp  sacr.cpp
